# FluffEngine

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  Notes.txt  README.md  ShaderHowTo.txt  TODO.txt  Windows-Clean.bat  Windows-GenProject.bat  collect_dependencies.py  luminos-engine.sln
Engine/: CMakeLists.txt
Engine/Dependencies/LICENSES/: ENTITAS.LICENSE  NUKLEAR.LICENSE
Engine/Dependencies/assimp/lib/Release/x64/: assimp-vc140-mt.lib
Engine/Dependencies/cereal/include/cereal/archives/: json.hpp
Engine/Dependencies/glew/lib/Debug/Win32/: glew32s.lib
Engine/Dependencies/glew/lib/Debug/x64/: glew32s.lib
Engine/Dependencies/glew/lib/Release/Win32/: glew32s.lib
Engine/Dependencies/glew/lib/Release/x64/: glew32s.lib
Engine/Dependencies/glfw/lib/Release/x64/: glfw3-debug.lib
Engine/Dependencies/glm/lib/Release/Win32/: glm_static.lib
Engine/Dependencies/imgui/src/imgui/: imgui.cpp  imgui_demo.cpp  imgui_draw.cpp
Engine/Dependencies/physx/include/Physx/common/: PxPhysXCommonConfig.h  PxTolerancesScale.h
Engine/Dependencies/physx/include/Physx/cooking/: PxBVH33MidphaseDesc.h  PxBVH34MidphaseDesc.h  PxConvexMeshDesc.h  PxCooking.h  PxMidphaseDesc.h  PxTriangleMeshDesc.h  Pxc.h
Engine/Dependencies/physx/include/Physx/extensions/: PxDefaultAllocator.h  PxDefaultCpuDispatcher.h  PxDefaultErrorCallback.h  PxDefaultSimulationFilterShader.h  PxMassProperties.h  PxRigidActorExt.h  PxRigidBodyExt.h  PxSimpleFactory.h
Engine/Dependencies/physx/include/Physx/foundation/: Px.h  PxAllocatorCallback.h  PxAssert.h  PxBitAndData.h  PxBounds3.h  PxErrorCallback.h  PxErrors.h  PxFoundation.h  PxIntrinsics.h  PxMat33.h  PxMat44.h  PxMath.h  PxMathUtils.h  PxPlane.h  PxProfiler.h  PxQuat.h  PxSimpleTypes.h  PxTransform.h  PxVec3.h  PxVec4.h
Engine/Dependencies/physx/include/Physx/geometry/: PxHeightFieldDesc.h  PxHeightFieldFlag.h  PxHeightFieldSample.h  PxSimpleTriangleMesh.h  PxTriangleMesh.h
Engine/Dependencies/physx/include/Physx/pvd/: PxPvd.h  PxPvdTransport.h
Engine/Dependencies/physx/include/Physx/task/: PxCpuDispatcher.h  PxTaskDefine.h
Engine/Dependencies/stb/include/: stb_image_write.h
Engine/Source/Core/Private/core/: core.cpp  engine_settings.cpp  lookup_table.cpp  timer.cpp  window.cpp
Engine/Source/Core/Private/core/allocators/: allocator.cpp
Engine/Source/Core/Private/core/assets/: material_library.cpp
Engine/Source/Core/Private/core/debug/: debug_log_writer.cpp  debug_system.cpp
Engine/Source/Core/Private/core/ecs/: entity.cpp  event.cpp  event_manager.cpp  isystem.cpp  itask.cpp  pool.cpp  sync_system.cpp  system.cpp  task_system.cpp
Engine/Source/Core/Private/core/inputs/: keyboard.cpp
Engine/Source/Core/Private/core/profiling/: function_timer.cpp
Engine/Source/Core/Private/core/threading/: thread_pool.cpp  threadpool.cpp
Engine/Source/Core/Private/file/: filereader.cpp  shader_utility.cpp
Engine/Source/Core/Private/gfx/: context.cpp  error_callback.cpp  frame_buffer.cpp  mesh.cpp  pipeline.cpp  shader.cpp  shader_buffer.cpp
Engine/Source/Core/Private/physics/: physics_actor.cpp  physics_component.cpp  physics_manager.cpp  physics_scene.cpp  physics_system.cpp
Engine/Source/Core/Private/rendering/: material.cpp  render_system.cpp  resource_library.cpp  scene_renderer.cpp  screenshot_system.cpp  terrain.cpp  uniform.cpp
Engine/Source/Core/Private/rendering/ui/: backend_imgui_wrapper.cpp
Engine/Source/Core/Private/serial/: binary_buffer.cpp
Engine/Source/Core/Private/serial/types/: iserializable.cpp  primitives.cpp  serialized_vector.cpp
Engine/Source/Core/Private/serialization-legacy/: serialization_animation.cpp  serialization_bone.cpp  serialization_field.cpp  serialization_model.cpp  serialization_modelloader.cpp  serialization_nodeanim.cpp  serialization_string.cpp
Engine/Source/Core/Private/ui/: ui_component.cpp  ui_surface.cpp  ui_widget.cpp
Engine/Source/Core/Private/util/: maths.cpp
Engine/Source/Core/Public/: common.h  debug.h  fluff-util.h  stb_image.h
Engine/Source/Core/Public/core/: core.h  debug_message.h  debug_system.h  engine_settings.h  lookup_table.h  registry.h  transformation.h  transformation_component.h  window.h
Engine/Source/Core/Public/core/allocators/: allocator.h
Engine/Source/Core/Public/core/assets/: material_library.h  mesh_library.h  pipeline_library.h  texture_library.h
Engine/Source/Core/Public/gfx/: error_callback.h  mesh.h  model.h  model_submit_event.h  sampler.h  texture.h
Engine/Source/Core/Public/net/: net_api.h
Engine/Source/Core/Public/physics/: physics.h  physics_actor.h  physics_component.h  physics_component_backend.h  physics_geometry.h  physics_material.h  physics_scene.h  physics_system.h
Engine/Source/Core/Public/rendering/: framebuffer_resource.h  lighting_manager.h  render_context.h  render_resource.h  render_system.h  renderable_component.h  scene_lighting.h  scene_renderer.h  screenshot.h  screenshot_system.h
Engine/Source/Core/Public/serial/: database.h  serial.h
Engine/Source/Core/Public/serialization-legacy/: serialization_animationbehavior.h  serialization_animbehave.h  serialization_array.h  serialization_nodeanim.h
Engine/Source/Core/Public/ui/: ui_component.h  ui_surface.h  ui_widget.h
Engine/Source/Core/Public/util/: FastNoise.h  fileutils.h
Sandbox/: CMakeLists.txt
Sandbox/Content/: basic_forward.fs  basic_forward.vs  basic_forward_out.fs  basic_forward_out.vs  basic_pipeline.asset  def.asset  deferred.fs  deferred_pipeline.asset  imgui.ini  lighting.header  logging.json  main.cpp  material_2.asset  materials.json  output.json  pine.asset  pipeline.json  resource_library.asset  settings.json  task_system.json  terrain_deferred.fs  terrain_material.asset  terrain_triplanar.fs  terrain_triplanar.vs  test_shader_file.fs  test_system.h  text_pipeline.asset  textures.asset
Sandbox/Content/resources/: text.frag  text.vert  ui_windows.frag
Sandbox/Source/Private/: ds_state.cpp  editor_state.cpp  main.cpp  sphere_generators.cpp
Sandbox/Source/Public/: ds_state.h  editor_state.h  movement_system.h  sphere_generators.h
(+474 files in other folders)
